syntax = "proto3";

package io.bigfast;

//import "scalapb/scalapb.proto";

message Channel {
    message Message {
        uint64 channelId = 1;
        uint64 userId = 2;
        string content = 3;
    }

    message Get {
        uint64 channelId = 1;
        uint32 until = 2;
        uint32 batchSize = 3;
    }

    message Create {
        uint64 channelId = 1;
    }

    uint64 channelId = 1;
    repeated Message messages = 2;
}

// The chat service definition.
service Chat {
    rpc ChannelMessageStream(stream Channel.Message) returns (stream Channel.Message) {}
    rpc CreateChannel(Channel.Create) returns (Channel) {}
    rpc ChannelHistory(Channel.Get) returns (Channel) {}
}

